# 3d_map_builder

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: EXAMPLE_CONFIG.json  manual_calibration_config.yaml  rviz_config.rviz  visualize_map_config.yaml
config/examples/: EXAMPLE_CONFIG.json  EXAMPLE_EXTRINSICS.json
docs/: ConfigExample.json  ExampleExtrinsics.json
include/map_builder/: MapBuilder.h  MapBuilderTest.h
launch/: manual_calibration.launch  visualize_map.launch
msg/: ManualCalibrationMsg.msg
scripts/: build_catkin_ws.bash  export_libbeam_cmake_variables.bash  install.bash  install_docker.bash
src/: MapBuilder.cpp  MapBuilderTest.cpp  append_trajectory.cpp  bag_to_poses_file.cpp  build_map.cpp  fill_in_trajectory.cpp  loop_closed_paths_to_poses.cpp  manual_calibration.cpp  path_messages_to_pose_files.cpp  poses_to_poses_file.cpp  visualize_map.cpp
tests/: MapBuilderTest.cpp
tests/test_data/: TestConfigBAG.json  TestConfigJSON.json  TestConfigPCD.json  TestConfigPLY.json  TestPosesJSON.json  TestPosesPCD.pcd  TestPosesPLY.ply  extrinsics.json
