<?xml version="1.0"?>
<package format="2">
  <name>map_builder</name>
  <version>0.1.0</version>
  <description>tool for building 3d maps from a SLAM trajectory and 3D sensor data in a ROS bag</description>

  <author email="nicholas.c.charron@gmail.com">Nick Charron</author>
  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libbeam</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>octomap</build_depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>


  <exec_depend>message_runtime</exec_depend>
</package>
